--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,6 @@
+sonar.projectKey=frankois944_WeatherWithFlutter
+sonar.organization=frankois944
+
 # Path to sources
 sonar.sources=lib/
 sonar.exclusions=android/,ios/,linux/,macos/,web/,windows/
