add code coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,3 +16,5 @@ sonar.sourceEncoding=UTF-8
 
 # Exclusions for copy-paste detection
 #sonar.cpd.exclusions=
+
+sonar.dart.lcov.reportPaths=coverage/lcov.info
