--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.0
+  json_annotation: ^4.9.0
+  logging: ^1.3.0
+  shared_preferences: ^2.4.0
+  geolocator: ^13.0.0
+  provider: ^6.1.2
+  freezed_annotation: ^2.4.4
+  result_type: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +52,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  freezed: ^2.5.7
+  json_serializable: ^6.9.0
+  build_runner: ^2.4.14
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
