--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          cache: true
+          cache: false
           channel: stable
           flutter-version: 3.27.3
       - name: flutter get
