--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,9 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          cache: false
+          cache: true
           channel: stable
           flutter-version: 3.27.3
-      - name: flutter get
-        run: flutter pub get
       - name: flutter test
         run: flutter test --coverage
       - name: SonarQube Scan
