--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           channel: stable
           flutter-version: 3.27.3
       - name: flutter test
-        run: flutter clean && flutter test --coverage
+        run: dart run build_runner build  && flutter test --coverage
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v4
         env:
