--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,5 +24,9 @@ jobs:
         run: flutter test --coverage
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v4
+        with:
+          args: >
+            -Dsonar.organization=frankois944
+            -Dsonar.projectKey=frankois944_WeatherWithFlutter
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
